--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 title: [My local site]
 description: [A short description of your site's purpose]
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme
