--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ description: [A short description of your site's purpose]
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme
+show_downloads: [false]
