--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "nerei.net"
 author: "Lackner Reinhard"
-description: "I will use this blog as a pastebin for stuff I learn and don't want to forget." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "I will use this blog as my personal pastebin for stuff I learn and don't want to forget." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
