--- a/_config.yml
+++ b/_config.yml
@@ -1,39 +1,82 @@
-title: "nerei.net"
-author: "Lackner Reinhard"
-description: "I will use this blog as my personal pastebin for stuff I learn and don't want to forget." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+theme: minima
 
-# Email / Social media user names used by the minima theme:
-# All of these are optional and can be removed or commented out
-# email: "example@mail.com"
-mastodon_username: "macf00bar@hachyderm.io"
-github_username: "macf00bar"
-#linkedin_username: "linkedinuser"
+title: macf00bar's Blog
+author: Reinhard Lackner
+email: blog@nerei.net
+url: https://nerei.net
 
+timezone: UTC # GitHub uses UTC. This is to force dev environment to match
+future: false # GitHub Pages will publish future posts if this isn't set to false
 
-#########################################################################################
-######### Nothing below needs to be changed (unless you know what you're doing) #########
-#########################################################################################
-theme: "minima"
+description: >
+  \"I can't change the direction of the wind, but I can adjust my sails to always reach my destination." -- Jimmy Dean
 
+# Minima variables
+mastodon_username: macf00bar@nerei.net
+twitter_username:  macf00bar
+github_username:   macf00bar
+#linkedin_username: jekyl
+#dribbble_username: jekyll
+#facebook_username: jekyll
+#flickr_username: jekyll
+#instagram_username: jekyll
+#pinterest_username: jekyll
+#youtube_username: jekyll
+#googleplus_username: +jekyll
 rss: rss
 
-kramdown:
-  syntax_highlighter_opts:
-    disable: true
+show_excerpts: false
+
+# Used by simple links page
+social-links:
+  #Resume:        https://nerei.net/resume
+  Website:       https://nerei.net
+  Mastodon:      https://hachyderm.io/@macf00bar
+  GitHub:        https://github.com/mAcf00bar
+  StackOverflow: https://stackoverflow.com/users/129283
+  #LinkedIn:      https://linkedin.com/in/nerei
+  Twitter:       https://twitter.com/mAcf00bar
+
+
+# plugin: jekyll-seo-tag
+social:
+  name: Reinhard Lackner
+  links:
+    - https://hachyderm.io/@macf00bar
+    - https://github.com/mAcf00bar
+
+# plugin: jekyll-titles-from-headings
+titles_from_headings:
+  strip_title: true
+
+header_pages:
+  #- resume.html
+  - archive.html
+  - bookmarks.md
 
 plugins:
   - jekyll-feed
   - jekyll-sitemap
 
-titles_from_headings:
-  strip_title: true
-  collections: true
+gravatar_hash: cd578fbc364f6c950ffc3585570b0f7f
+code_block_max_height: 500px
+
+home_post_limit: 5
 
 defaults:
   - scope:
       path: ""
-      type: post
     values:
-      tags: Other
+      image: https://s.gravatar.com/avatar/cd578fbc364f6c950ffc3585570b0f7f?s=80 # Apply default site image
+  - scope:
+      path: ""
+      type: posts
+    values:
+      tags:
+        - Other # Add a default tag to all posts
 
-include: [ "/.well-known" ]
+# Disable highlighting to use highlightJS instead
+# highlighter: none # Not supported by GitHub Pages
+kramdown:
+  syntax_highlighter_opts:
+    disable: true
